updated urls for render deployment

--- a/client-project/index.html
+++ b/client-project/index.html
@@ -16,6 +16,7 @@
         <input type="submit" value="submit" />
       </form>
     </div>
+    <div id="ramen-list"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
